lots of tweaks, everything working with the new architecture

--- a/build.properties
+++ b/build.properties
@@ -9,7 +9,7 @@ placeholder.css =   <!-- STYLES -->
 js.lib =            lib/underscore-min.js, lib/jquery-1.6.2.min.js, lib/mxn-min.js, lib/mxn.core-min.js, lib/mxn.googlev3.core-min.js, lib/timeline-2.3.0.js, lib/timemap_full.pack.js, lib/backbone.min.js, lib/d3.js
 js.libext =         lib/circle_icons.js, lib/label_utils.js, app/patches.js
 js.app = app/app.js
-js.app.models =     app/models/Model.js, app/models/Place.js, app/models/Page.js, app/models/Book.js
+js.app.models =     app/models/Model.js, app/models/State.js, app/models/Place.js, app/models/Page.js, app/models/Book.js
 js.app.views =      app/views/View.js, app/views/AppView.js, app/views/IndexView.js, app/views/BookView.js, app/views/BookTitleView.js, app/views/PageControlView.js, app/views/PageView.js, app/views/TimeMapView.js, app/views/PageNavView.js, app/views/PermalinkView.js
 js.app.routers =    app/routers/Router.js, app/routers/AppRouter.js, app/routers/IndexRouter.js, app/routers/BookRouter.js
 # master list
