querystrings working properly, now tracking maptypeid

--- a/build.properties
+++ b/build.properties
@@ -10,7 +10,7 @@ js.lib =            lib/underscore-min.js, lib/jquery-1.6.2.min.js, lib/mxn-min.
 js.libext =         lib/circle_icons.js, lib/label_utils.js, app/patches.js
 js.app = app/app.js
 js.app.models =     app/models/Model.js, app/models/State.js, app/models/Place.js, app/models/Page.js, app/models/Book.js
-js.app.views =      app/views/View.js, app/views/AppView.js, app/views/IndexView.js, app/views/BookView.js, app/views/BookTitleView.js, app/views/PageControlView.js, app/views/PageView.js, app/views/TimeMapView.js, app/views/PageNavView.js, app/views/PermalinkView.js
+js.app.views =      app/views/View.js, app/views/AppView.js, app/views/BookView.js, app/views/IndexView.js, app/views/BookTitleView.js, app/views/PageControlView.js, app/views/PageView.js, app/views/TimeMapView.js, app/views/PageNavView.js, app/views/PermalinkView.js
 js.app.routers =    app/routers/Router.js, app/routers/AppRouter.js, app/routers/IndexRouter.js, app/routers/BookRouter.js
 # master list
 js.files = ${js.lib}, ${js.libext}, ${js.app}, ${js.app.models}, ${js.app.views}, ${js.app.routers}
