--- a/build.properties
+++ b/build.properties
@@ -6,7 +6,7 @@ placeholder.js =    <!-- SCRIPTS -->
 placeholder.css =   <!-- STYLES -->
 
 # JS Scripts
-js.lib =            lib/underscore-min.js, lib/jquery-1.6.2.min.js, lib/mxn-min.js, lib/mxn.core-min.js, lib/mxn.googlev3.core-min.js, lib/timeline-2.3.0.js, lib/timemap_full.pack.js, lib/backbone.min.js, lib/d3.js
+js.lib =            lib/underscore-min.js, lib/jquery-1.6.2.min.js, lib/jquery-ui-1.8.16.custom.min.js, lib/mxn-min.js, lib/mxn.core-min.js, lib/mxn.googlev3.core-min.js, lib/timeline-2.3.0.js, lib/timemap_full.pack.js, lib/backbone.min.js, lib/d3.js
 js.libext =         lib/circle_icons.js, lib/label_utils.js, app/patches.js
 js.app = app/app.js
 js.app.models =     app/models/Model.js, app/models/State.js, app/models/Place.js, app/models/Page.js, app/models/Book.js
