adding ant deploy task

--- a/build.properties
+++ b/build.properties
@@ -1,5 +1,6 @@
 # Tools
 yuicompressor.jar = C:/Program Files/yuicompressor/build/yuicompressor.jar
+git.exe = C:/Program Files/Git/bin/git.exe
 
 # Placeholders
 placeholder.js =    <!-- SCRIPTS -->
