--- a/build.properties
+++ b/build.properties
@@ -7,14 +7,17 @@ placeholder.js =    <!-- SCRIPTS -->
 placeholder.css =   <!-- STYLES -->
 
 # JS Scripts
-js.lib =            lib/underscore-min.js, lib/jquery-1.6.2.min.js, lib/jquery-ui-1.8.16.custom.min.js, lib/mxn-min.js, lib/mxn.core-min.js, lib/mxn.googlev3.core-min.js, lib/timeline-2.3.0.js, lib/timemap_full.pack.js, lib/backbone.min.js, lib/d3.js
-js.libext =         lib/circle_icons.js, lib/label_utils.js, app/patches.js
-js.app = app/app.js
+js.lib.dev =        lib/underscore/underscore.js, lib/jquery/jquery-1.6.2.min.js, lib/jquery/jquery-ui-1.8.16.custom.min.js, lib/mxn/mxn.js, lib/mxn/mxn.core.js, lib/mxn/mxn.googlev3.core.js, lib/timeline/timeline-2.3.0.js, lib/timemap/src/timemap.js, lib/timemap/src/param.js, lib/timemap/src/state.js, lib/timemap/src/loaders/progressive.js, lib/backbone/backbone.js, lib/d3/d3.js
+js.lib.min =        lib/underscore/underscore.min.js, lib/jquery/jquery-1.6.2.min.js, lib/jquery/jquery-ui-1.8.16.custom.min.js, lib/mxn/mxn-min.js, lib/mxn/mxn.core-min.js, lib/mxn/mxn.googlev3.core-min.js, lib/timeline/timeline-2.3.0.js, lib/timemap/timemap_full.pack.js, lib/backbone/backbone.min.js, lib/d3/d3.min.js
+js.libext =         lib/timemap/src/ext/circle_icons.js, lib/timeline/label_utils.js, app/patches.js
+js.app =            app/app.js
 js.app.models =     app/models/Model.js, app/models/State.js, app/models/Place.js, app/models/Page.js, app/models/Book.js
 js.app.views =      app/views/View.js, app/views/AppView.js, app/views/BookView.js, app/views/BookSummaryView.js, app/views/BookReadingView.js, app/views/IndexView.js, app/views/BookTitleView.js, app/views/PlaceFrequencyBarsView.js, app/views/PageControlView.js, app/views/PageView.js, app/views/TimeMapView.js, app/views/PageNavView.js, app/views/PermalinkView.js
 js.app.routers =    app/routers/Router.js, app/routers/AppRouter.js, app/routers/IndexRouter.js, app/routers/BookSummaryRouter.js, app/routers/BookRouter.js
-# master list
-js.files = ${js.lib}, ${js.libext}, ${js.app}, ${js.app.models}, ${js.app.views}, ${js.app.routers}
+# master lists
+js.files.nolib = ${js.libext}, ${js.app}, ${js.app.models}, ${js.app.views}, ${js.app.routers}
+js.files.dev = ${js.lib.dev}, ${js.files.nolib}
+js.files.production = ${js.lib.min}, ${js.files.nolib}
 
 # CSS Styles
 css.lib =    css/style.css
