adding frequency bars to info window

--- a/build.properties
+++ b/build.properties
@@ -13,7 +13,7 @@ js.lib.min =        lib/underscore/underscore-min.js, lib/jquery/jquery-ui-1.8.1
 js.libext =         lib/timemap/src/ext/circle_icons.js, lib/label_utils.js, app/patches.js
 js.app =            app/app.js
 js.app.models =     app/models/Model.js, app/models/State.js, app/models/Place.js, app/models/Page.js, app/models/Book.js
-js.app.views =      app/views/View.js, app/views/AppView.js, app/views/BookView.js, app/views/BookSummaryView.js, app/views/BookReadingView.js, app/views/IndexView.js, app/views/BookTitleView.js, app/views/PlaceFrequencyBarsView.js, app/views/PageControlView.js, app/views/PageView.js, app/views/TimeMapView.js, app/views/PageNavView.js, app/views/PermalinkView.js
+js.app.views =      app/views/View.js, app/views/AppView.js, app/views/BookView.js, app/views/BookSummaryView.js, app/views/BookReadingView.js, app/views/IndexView.js, app/views/BookTitleView.js, app/views/PlaceFrequencyBarsView.js, app/views/PageControlView.js, app/views/PageView.js, app/views/InfoWindowView.js, app/views/TimeMapView.js, app/views/PageNavView.js, app/views/PermalinkView.js
 js.app.routers =    app/routers/Router.js, app/routers/AppRouter.js, app/routers/IndexRouter.js, app/routers/BookSummaryRouter.js, app/routers/BookRouter.js
 # master lists
 js.files.app = ${js.app}, ${js.app.models}, ${js.app.views}, ${js.app.routers}
