--- a/build.properties
+++ b/build.properties
@@ -10,20 +10,20 @@ placeholder.css =   <!-- STYLES -->
 
 # libraries
 js.lib.nomunge =    http://maps.google.com/maps/api/js?sensor=false, http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js, lib/timeline-2.3.0.js
-js.lib.dev =        lib/underscore/underscore.js, lib/jquery/jquery-ui-1.8.16.custom.min.js, lib/mxn/mxn.js, lib/mxn/mxn.core.js, lib/mxn/mxn.googlev3.core.js, lib/timemap/src/timemap.js, lib/timemap/src/param.js, lib/timemap/src/state.js, lib/timemap/src/loaders/progressive.js, lib/backbone/backbone.js, lib/d3/d3.js
+js.lib.dev =        lib/underscore/underscore.js, lib/jquery/jquery-ui-1.8.16.custom.js, lib/mxn/mxn.js, lib/mxn/mxn.core.js, lib/mxn/mxn.googlev3.core.js, lib/timemap/src/timemap.js, lib/timemap/src/param.js, lib/timemap/src/state.js, lib/timemap/src/loaders/progressive.js, lib/backbone/backbone.js, lib/d3/d3.js
 js.lib.min =        lib/underscore/underscore-min.js, lib/jquery/jquery-ui-1.8.16.custom.min.js, lib/mxn/mxn-min.js, lib/mxn/mxn.core-min.js, lib/mxn/mxn.googlev3.core-min.js, lib/timeline-2.3.0.js, lib/timemap/timemap_full.pack.js, lib/backbone/backbone.min.js, lib/d3/d3.min.js
 js.libext =         lib/timemap/src/ext/circle_icons.js, lib/label_utils.js, app/patches.js
 # app scripts
 js.app =            app/app.js
 js.app.models =     app/models/Model.js, app/models/State.js, app/models/Place.js, app/models/Page.js, app/models/Book.js
-js.app.views =      app/views/View.js, app/views/AppView.js, app/views/BookView.js, app/views/BookSummaryView.js, app/views/BookReadingView.js, app/views/BookPlaceView.js, app/views/IndexView.js, app/views/BookTitleView.js, app/views/PlaceFrequencyBarsView.js, app/views/PageControlView.js, app/views/PageView.js, app/views/InfoWindowView.js, app/views/TimeMapView.js, app/views/PageNavView.js, app/views/PermalinkView.js, app/views/PlaceSummaryView.js
+js.app.views =      app/views/View.js, app/views/AppView.js, app/views/BookView.js, app/views/BookSummaryView.js, app/views/BookReadingView.js, app/views/BookPlaceView.js, app/views/IndexView.js, app/views/BookTitleView.js, app/views/PlaceFrequencyBarsView.js, app/views/PageControlView.js, app/views/PageView.js, app/views/InfoWindowView.js, app/views/TimeMapView.js, app/views/PageNavView.js, app/views/NavigationView.js, app/views/PlaceSummaryView.js
 js.app.routers =    app/routers/Router.js, app/routers/AppRouter.js, app/routers/IndexRouter.js, app/routers/BookSummaryRouter.js, app/routers/BookPlaceRouter.js, app/routers/BookRouter.js
 # master lists
 js.files.app = ${js.app}, ${js.app.models}, ${js.app.views}, ${js.app.routers}
 js.files.dev = ${js.lib.nomunge}, ${js.lib.dev}, ${js.libext}, ${js.files.app}
 
 # CSS Styles
-css.lib =    css/style.css
+css.lib =    css/style.css, lib/jquery/css/jquery-ui-1.8.16.custom.css
 css.app =    css/gapvis.css
 # master list
 css.files = ${css.lib}, ${css.app}
