--- a/build.properties
+++ b/build.properties
@@ -16,7 +16,7 @@ js.libext =         lib/timemap/src/ext/circle_icons.js, lib/label_utils.js, app
 # app scripts
 js.app =            app/app.js
 js.app.models =     app/models/Model.js, app/models/State.js, app/models/Place.js, app/models/Page.js, app/models/Book.js
-js.app.views =      app/views/View.js, app/views/AppView.js, app/views/BookView.js, app/views/BookSummaryView.js, app/views/BookReadingView.js, app/views/BookPlaceView.js, app/views/IndexView.js, app/views/BookTitleView.js, app/views/PlaceFrequencyBarsView.js, app/views/PageControlView.js, app/views/PageView.js, app/views/InfoWindowView.js, app/views/TimeMapView.js, app/views/PageNavView.js, app/views/NavigationView.js, app/views/PlaceSummaryView.js
+js.app.views =      app/views/View.js, app/views/AppView.js, app/views/BookView.js, app/views/BookSummaryView.js, app/views/BookReadingView.js, app/views/BookPlaceView.js, app/views/IndexView.js, app/views/BookTitleView.js, app/views/PlaceFrequencyBarsView.js, app/views/BookSummaryTextView.js, app/views/PageControlView.js, app/views/PageView.js, app/views/InfoWindowView.js, app/views/TimeMapView.js, app/views/PageNavView.js, app/views/NavigationView.js, app/views/PlaceSummaryView.js
 js.app.routers =    app/routers/Router.js, app/routers/AppRouter.js, app/routers/IndexRouter.js, app/routers/BookSummaryRouter.js, app/routers/BookPlaceRouter.js, app/routers/BookRouter.js
 # master lists
 js.files.app = ${js.app}, ${js.app.models}, ${js.app.views}, ${js.app.routers}
