layout for summary map

--- a/build.properties
+++ b/build.properties
@@ -22,7 +22,8 @@ js.app.views =      app/views/View.js, app/views/AppView.js, app/views/BookView.
                     app/views/BookTitleView.js, app/views/PlaceFrequencyBarsView.js, app/views/BookSummaryTextView.js,\
                     app/views/BookWordCloudView.js, app/views/PageControlView.js, app/views/PageView.js,\
                     app/views/InfoWindowView.js, app/views/TimeMapView.js, app/views/PageNavView.js,\
-                    app/views/NavigationView.js, app/views/PlaceSummaryView.js, app/views/RelatedPlacesView.js
+                    app/views/NavigationView.js, app/views/PlaceSummaryView.js, app/views/RelatedPlacesView.js,\
+                    app/views/BookSummaryMapView.js
 js.app.routers =    app/routers/Router.js, app/routers/AppRouter.js, app/routers/IndexRouter.js,\
                     app/routers/BookSummaryRouter.js, app/routers/BookPlaceRouter.js, app/routers/BookRouter.js
 js.app.templates =  app/templates/book-summary-text-template.html, app/templates/page-template.html,\
