Moving common settings to settings.js

--- a/build.properties
+++ b/build.properties
@@ -15,7 +15,7 @@ js.lib.dev =        lib/underscore/underscore.js, lib/jquery/jquery-ui-1.8.16.cu
 js.lib.min =        lib/underscore/underscore-min.js, lib/jquery/jquery-ui-1.8.16.custom.min.js, lib/mxn/mxn-min.js, lib/mxn/mxn.core-min.js, lib/mxn/mxn.googlev3.core-min.js, lib/timeline-2.3.0.js, lib/timemap/timemap_full.pack.js, lib/backbone/backbone.min.js, lib/d3/d3.min.js
 js.libext =         lib/timemap/src/ext/circle_icons.js, lib/label_utils.js, app/patches.js
 # app scripts
-js.app =            app/app.js
+js.app =            app/app.js, app/settings.js
 js.app.models =     app/models/Model.js, app/models/State.js, app/models/Place.js, app/models/Page.js, app/models/Book.js
 js.app.views =      app/views/View.js, app/views/AppView.js, app/views/BookView.js, app/views/BookSummaryView.js,\
                     app/views/BookReadingView.js, app/views/BookPlaceView.js, app/views/IndexView.js,\
