Adding flickr photos

--- a/build.properties
+++ b/build.properties
@@ -23,13 +23,13 @@ js.app.views =      app/views/View.js, app/views/AppView.js, app/views/BookView.
                     app/views/BookWordCloudView.js, app/views/PageControlView.js, app/views/PageView.js,\
                     app/views/InfoWindowView.js, app/views/TimeMapView.js, app/views/PageNavView.js,\
                     app/views/NavigationView.js, app/views/PlaceSummaryView.js, app/views/RelatedPlacesView.js,\
-                    app/views/BookSummaryMapView.js, app/views/BookPlaceMapView.js
+                    app/views/BookSummaryMapView.js, app/views/BookPlaceMapView.js, app/views/BookPlaceFlickrView.js
 js.app.routers =    app/routers/Router.js, app/routers/AppRouter.js, app/routers/IndexRouter.js,\
                     app/routers/BookSummaryRouter.js, app/routers/BookPlaceRouter.js, app/routers/BookRouter.js
 js.app.templates =  app/templates/book-summary-text-template.html, app/templates/page-template.html,\
                     app/templates/book-title-template.html, app/templates/place-summary-template.html,\
                     app/templates/info-window-template.html, app/templates/timemap-template.html,\
-                    app/templates/navigation-view-template.html
+                    app/templates/navigation-view-template.html, app/templates/flickr-photo-template.html
 # master lists
 js.files.app = ${js.app}, ${js.app.models}, ${js.app.views}, ${js.app.routers}
 js.files.dev = ${js.lib.nomunge}, ${js.lib.dev}, ${js.libext}, ${js.files.app}
