Adding index page instructions, tweaking layout

--- a/build.properties
+++ b/build.properties
@@ -30,7 +30,8 @@ js.app.routers =    app/routers/Router.js, app/routers/AppRouter.js, app/routers
 js.app.templates =  app/templates/book-summary-text-template.html, app/templates/page-template.html,\
                     app/templates/book-title-template.html, app/templates/place-summary-template.html,\
                     app/templates/info-window-template.html, app/templates/timemap-template.html,\
-                    app/templates/navigation-view-template.html, app/templates/flickr-photo-template.html
+                    app/templates/navigation-view-template.html, app/templates/flickr-photo-template.html,\
+                    app/templates/book-list-template.html
 # master lists
 js.files.app = ${js.app}, ${js.app.models}, ${js.app.views}, ${js.app.routers}
 js.files.dev = ${js.lib.nomunge}, ${js.lib.dev}, ${js.libext}, ${js.files.app}
