top views slide left/right in logical order :)

--- a/build.properties
+++ b/build.properties
@@ -17,14 +17,14 @@ js.libext =         lib/timemap/src/ext/circle_icons.js, lib/label_utils.js, app
 # app scripts
 js.app =            app/app.js, app/settings.js
 js.app.models =     app/models/Model.js, app/models/State.js, app/models/Place.js, app/models/Page.js, app/models/Book.js
-js.app.views =      app/views/View.js, app/views/AppView.js, app/views/BookView.js, app/views/BookSummaryView.js,\
+js.app.views =      app/views/View.js, app/views/BookView.js, app/views/BookSummaryView.js,\
                     app/views/BookReadingView.js, app/views/BookPlaceView.js, app/views/IndexView.js,\
                     app/views/BookTitleView.js, app/views/PlaceFrequencyBarsView.js, app/views/BookSummaryTextView.js,\
                     app/views/BookWordCloudView.js, app/views/PageControlView.js, app/views/PageView.js,\
                     app/views/InfoWindowView.js, app/views/TimeMapView.js, app/views/PageNavView.js,\
                     app/views/NavigationView.js, app/views/PlaceSummaryView.js, app/views/RelatedPlacesView.js,\
                     app/views/BookSummaryMapView.js, app/views/BookPlaceMapView.js, app/views/BookPlaceFlickrView.js,\
-                    app/views/ChangeLinkView.js, app/views/ChangeFormView.js
+                    app/views/ChangeLinkView.js, app/views/ChangeFormView.js, app/views/AppView.js
 js.app.routers =    app/routers/Router.js, app/routers/AppRouter.js, app/routers/IndexRouter.js,\
                     app/routers/BookSummaryRouter.js, app/routers/BookPlaceRouter.js, app/routers/BookRouter.js
 js.app.templates =  app/templates/book-summary-text-template.html, app/templates/page-template.html,\
