--- a/build.properties
+++ b/build.properties
@@ -11,8 +11,8 @@ placeholder.templates = <!-- TEMPLATES -->
 
 # libraries
 js.lib.nomunge =    http://maps.google.com/maps/api/js?sensor=false, http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js, lib/timeline-2.3.0.js
-js.lib.dev =        lib/underscore/underscore.js, lib/jquery/jquery-ui-1.8.16.custom.js, lib/mxn/mxn.js, lib/mxn/mxn.core.js, lib/mxn/mxn.googlev3.core.js, lib/timemap/src/timemap.js, lib/timemap/src/param.js, lib/timemap/src/state.js, lib/timemap/src/loaders/progressive.js, lib/backbone/backbone.js, lib/d3/d3.js
-js.lib.min =        lib/underscore/underscore-min.js, lib/jquery/jquery-ui-1.8.16.custom.min.js, lib/mxn/mxn-min.js, lib/mxn/mxn.core-min.js, lib/mxn/mxn.googlev3.core-min.js, lib/timeline-2.3.0.js, lib/timemap/timemap_full.pack.js, lib/backbone/backbone.min.js, lib/d3/d3.min.js
+js.lib.dev =        app/shim.js, lib/augment-0.3.1.min.js, lib/underscore/underscore.js, lib/jquery/jquery-ui-1.8.16.custom.js, lib/mxn/mxn.js, lib/mxn/mxn.core.js, lib/mxn/mxn.googlev3.core.js, lib/timemap/src/timemap.js, lib/timemap/src/param.js, lib/timemap/src/state.js, lib/timemap/src/loaders/progressive.js, lib/backbone/backbone.js, lib/d3/d3.js
+js.lib.min =        app/shim.js, lib/augment-0.3.1.min.js, lib/underscore/underscore-min.js, lib/jquery/jquery-ui-1.8.16.custom.min.js, lib/mxn/mxn-min.js, lib/mxn/mxn.core-min.js, lib/mxn/mxn.googlev3.core-min.js, lib/timeline-2.3.0.js, lib/timemap/timemap_full.pack.js, lib/backbone/backbone.min.js, lib/d3/d3.min.js
 js.libext =         lib/timemap/src/ext/circle_icons.js, lib/label_utils.js, app/patches.js
 # app scripts
 js.app =            app/app.js, app/settings.js
