Adding Google Analytics code to production build

--- a/build.properties
+++ b/build.properties
@@ -6,6 +6,7 @@ git.exe = C:/Program Files/Git/bin/git.exe
 placeholder.js =        <!-- SCRIPTS -->
 placeholder.css =       <!-- STYLES -->
 placeholder.templates = <!-- TEMPLATES -->
+placeholder.analytics = <!-- ANALYTICS -->
 
 # JS Scripts
 
