Adding message view per #10

--- a/build.properties
+++ b/build.properties
@@ -25,7 +25,8 @@ js.app.views =      app/views/View.js, app/views/BookView.js, app/views/BookSumm
                     app/views/InfoWindowView.js, app/views/TimeMapView.js, app/views/PageNavView.js,\
                     app/views/NavigationView.js, app/views/PlaceSummaryView.js, app/views/RelatedPlacesView.js,\
                     app/views/BookSummaryMapView.js, app/views/BookPlaceMapView.js, app/views/BookPlaceFlickrView.js,\
-                    app/views/ChangeLinkView.js, app/views/ChangeFormView.js, app/views/AppView.js
+                    app/views/ChangeLinkView.js, app/views/ChangeFormView.js, app/views/MessageView.js,\
+                    app/views/AppView.js
 js.app.routers =    app/routers/Router.js, app/routers/AppRouter.js, app/routers/IndexRouter.js,\
                     app/routers/BookSummaryRouter.js, app/routers/BookPlaceRouter.js, app/routers/BookRouter.js
 js.app.templates =  app/templates/book-summary-text-template.html, app/templates/page-template.html,\
