--- a/build.properties
+++ b/build.properties
@@ -15,9 +15,15 @@ js.lib.nomunge =    http://maps.google.com/maps/api/js?sensor=false, http://ajax
 js.lib.dev =        app/shim.js, lib/augment-0.3.1.min.js, lib/underscore/underscore.js, lib/jquery/jquery-ui-1.8.16.custom.js, lib/mxn/mxn.js, lib/mxn/mxn.core.js, lib/mxn/mxn.googlev3.core.js, lib/timemap/src/timemap.js, lib/timemap/src/param.js, lib/timemap/src/state.js, lib/timemap/src/loaders/progressive.js, lib/backbone/backbone.js, lib/d3/d3.js
 js.lib.min =        app/shim.js, lib/augment-0.3.1.min.js, lib/underscore/underscore-min.js, lib/jquery/jquery-ui-1.8.16.custom.min.js, lib/mxn/mxn-min.js, lib/mxn/mxn.core-min.js, lib/mxn/mxn.googlev3.core-min.js, lib/timeline-2.3.0.js, lib/timemap/timemap_full.pack.js, lib/backbone/backbone-min.js, lib/d3/d3.min.js
 js.libext =         lib/timemap/src/ext/circle_icons.js, lib/label_utils.js, app/patches.js
+
 # app scripts
-js.app =            app/app.js, app/settings.js
+js.app.core =                app/app.js, app/settings.js
+js.app.settings.dev =        app/settings.dev.js
+js.app.settings.production = app/settings.production.js
+
+# models
 js.app.models =     app/models/Model.js, app/models/State.js, app/models/Place.js, app/models/Page.js, app/models/Book.js
+# views
 js.app.views =      app/views/View.js, app/views/BookView.js, app/views/BookSummaryView.js,\
                     app/views/BookReadingView.js, app/views/BookPlaceView.js, app/views/IndexView.js,\
                     app/views/BookTitleView.js, app/views/PlaceFrequencyBarsView.js, app/views/BookSummaryTextView.js,\
@@ -27,19 +33,27 @@ js.app.views =      app/views/View.js, app/views/BookView.js, app/views/BookSumm
                     app/views/BookSummaryMapView.js, app/views/BookPlaceMapView.js, app/views/BookPlaceFlickrView.js,\
                     app/views/ChangeLinkView.js, app/views/ChangeFormView.js, app/views/MessageView.js,\
                     app/views/AppView.js
+# routers
 js.app.routers =    app/routers/Router.js, app/routers/AppRouter.js, app/routers/IndexRouter.js,\
                     app/routers/BookSummaryRouter.js, app/routers/BookPlaceRouter.js, app/routers/BookRouter.js
+# templates
 js.app.templates =  app/templates/book-summary-text-template.html, app/templates/page-template.html,\
                     app/templates/book-title-template.html, app/templates/place-summary-template.html,\
                     app/templates/info-window-template.html, app/templates/timemap-template.html,\
                     app/templates/navigation-view-template.html, app/templates/flickr-photo-template.html,\
                     app/templates/book-list-template.html
 # master lists
-js.files.app = ${js.app}, ${js.app.models}, ${js.app.views}, ${js.app.routers}
-js.files.dev = ${js.lib.nomunge}, ${js.lib.dev}, ${js.libext}, ${js.files.app}
+js.files.app =      ${js.app.models}, ${js.app.views}, ${js.app.routers}
+js.files.dev =      ${js.lib.nomunge}, ${js.lib.dev}, ${js.libext}, ${js.app.core},\
+                    ${js.app.settings.dev}, ${js.files.app}
+js.files.compress = ${js.libext}, ${js.app.core}, ${js.app.core},\
+                    ${js.app.settings.production}, ${js.files.app}
 
 # CSS Styles
 css.lib =    css/style.css, lib/jquery/css/jquery-ui-1.8.16.custom.css
 css.app =    css/gapvis.css
 # master list
 css.files = ${css.lib}, ${css.app}
+
+# for the dev server
+dev.server.port = 8080
