Adding initial python/selenium unit tests

--- a/build.properties
+++ b/build.properties
@@ -1,6 +1,7 @@
 # Tools
 yuicompressor.jar = C:/Program Files/yuicompressor/build/yuicompressor.jar
 git.exe = C:/Program Files/Git/bin/git.exe
+selenium.jar = C:/Program Files/Selenium/selenium-server-standalone-2.20.0.jar
 
 # Placeholders
 placeholder.js =        <!-- SCRIPTS -->
