--- a/build.properties
+++ b/build.properties
@@ -28,7 +28,7 @@ js.app.models =     app/models/Model.js, app/models/State.js, app/models/Place.j
 js.app.views =      app/views/View.js, app/views/BookView.js, app/views/BookSummaryView.js,\
                     app/views/BookReadingView.js, app/views/BookPlaceView.js, app/views/IndexView.js,\
                     app/views/BookTitleView.js, app/views/PlaceFrequencyBarsView.js, app/views/BookSummaryTextView.js,\
-                    app/views/BookWordCloudView.js, app/views/PageControlView.js, app/views/PageView.js,\
+                    app/views/PageControlView.js, app/views/PageView.js,\
                     app/views/InfoWindowView.js, app/views/TimeMapView.js, app/views/PageNavView.js,\
                     app/views/NavigationView.js, app/views/PlaceSummaryView.js, app/views/RelatedPlacesView.js,\
                     app/views/BookSummaryMapView.js, app/views/BookPlaceMapView.js, app/views/BookPlaceFlickrView.js,\
@@ -47,8 +47,7 @@ js.app.templates =  app/templates/book-summary-text-template.html, app/templates
 js.files.app =      ${js.app.models}, ${js.app.views}, ${js.app.routers}
 js.files.dev =      ${js.lib.nomunge}, ${js.lib.dev}, ${js.libext}, ${js.app.core},\
                     ${js.app.settings.dev}, ${js.files.app}
-js.files.compress = ${js.libext}, ${js.app.core}, ${js.app.core},\
-                    ${js.app.settings.production}, ${js.files.app}
+js.files.compress = ${js.libext}, ${js.app.core}, ${js.app.settings.production}, ${js.files.app}
 
 # CSS Styles
 css.lib =    css/style.css, lib/jquery/css/jquery-ui-1.8.16.custom.css
