Moving dev server settings into command-line options

--- a/build.properties
+++ b/build.properties
@@ -57,3 +57,4 @@ css.files = ${css.lib}, ${css.app}
 
 # for the dev server
 dev.server.port = 8080
+dev.target.proxytarget = gap.alexandriaarchive.org
