changing build to use external dev server

--- a/build.properties
+++ b/build.properties
@@ -2,6 +2,7 @@
 yuicompressor.jar = C:/Program Files/yuicompressor/build/yuicompressor.jar
 git.exe = C:/Program Files/Git/bin/git.exe
 selenium.jar = C:/Program Files/Selenium/selenium-server-standalone-2.20.0.jar
+devserver.js = C:/Users/nick/Documents/tools/dev_server/dev_server.js
 
 # Placeholders
 placeholder.js =        <!-- SCRIPTS -->
