--- a/build.xml
+++ b/build.xml
@@ -270,13 +270,27 @@
         </exec>
     </target>
     
-    <target name="serve-dev"
-            depends="build-dev,
-                     start-server">
+    <target name="start-test-server">
+        <exec executable="cmd.exe">
+            <arg line="/K start node ${devserver.js} -p ${dev.server.port} --testapi -T ./tests/api" />
+        </exec>
+    </target>
+    
+    <target name="launch-in-browser">
         <exec executable="cmd.exe">
             <arg line="/K start http://localhost:${dev.server.port}/index.html" />
         </exec>
     </target>
+    
+    <target name="serve-dev"
+            depends="build-dev,
+                     start-server,
+                     launch-in-browser" />
+    
+    <target name="serve-test"
+            depends="build-dev,
+                     start-test-server,
+                     launch-in-browser" />
     
     <!-- Test targets -->
     <target name="run-tests" depends="build-dev, start-server">
