switching to casper.js-based testing

--- a/build.xml
+++ b/build.xml
@@ -264,13 +264,13 @@
     
     <!-- Dev Server targets -->
     
-    <target name="start-server">
+    <target name="start-proxy-server">
         <exec executable="cmd.exe">
             <arg line="/K start node ${devserver.js} -p ${dev.server.port} -t ${dev.target.proxytarget}" />
         </exec>
     </target>
     
-    <target name="start-test-server">
+    <target name="start-dev-server">
         <exec executable="cmd.exe">
             <arg line="/K start node ${devserver.js} -p ${dev.server.port} --testapi -T ./tests/api" />
         </exec>
@@ -282,21 +282,23 @@
         </exec>
     </target>
     
-    <target name="serve-dev"
+    <target name="serve-proxy"
             depends="build-dev,
-                     start-server,
+                     start-proxy-server,
                      launch-in-browser" />
     
-    <target name="serve-test"
+    <target name="serve-dev"
             depends="build-dev,
-                     start-test-server,
+                     start-dev-server,
                      launch-in-browser" />
     
     <!-- Test targets -->
-    <target name="run-tests" depends="build-dev, start-server">
+    <target name="run-tests" depends="build-dev, start-dev-server">
         <echo>Running tests</echo>
         <exec executable="python" failonerror="true">
-            <arg file="tests/test_app.py" />
+            <arg file="${casper.js}" />
+            <arg file="tests/run.js" />
+            <arg file="tests/suites" />
         </exec>
     </target>
     
