--- a/build.properties
+++ b/build.properties
@@ -3,6 +3,7 @@ yuicompressor.jar = C:/Program Files/yuicompressor/build/yuicompressor.jar
 git.exe = C:/Program Files/Git/bin/git.exe
 selenium.jar = C:/Program Files/Selenium/selenium-server-standalone-2.20.0.jar
 devserver.js = C:/Users/nick/Documents/tools/dev_server/dev_server.js
+casper.js = C:/Program Files/PhantomJS/casperjs/bin/casperjs
 
 # Placeholders
 placeholder.js =        <!-- SCRIPTS -->
