Adding HTML compression - saves 3K

--- a/build.properties
+++ b/build.properties
@@ -1,7 +1,7 @@
 # Tools
 yuicompressor.jar = C:/Program Files/yuicompressor/build/yuicompressor.jar
+htmlcompressor.jar = C:/Program Files/yuicompressor/build/htmlcompressor-1.4.3.jar
 git.exe = C:/Program Files/Git/bin/git.exe
-selenium.jar = C:/Program Files/Selenium/selenium-server-standalone-2.20.0.jar
 devserver.js = C:/Users/nick/Documents/tools/dev_server/dev_server.js
 # casper.js = C:/Program Files/PhantomJS/casperjs/bin/casperjs
 casper.js = C:/Users/nick/Documents/GAP project/libs/casperjs/bin/casperjs
