Adding targets to serve and test production code with test API

--- a/build.properties
+++ b/build.properties
@@ -47,10 +47,11 @@ js.app.templates =  app/templates/book-summary-text-template.html, app/templates
                     app/templates/navigation-view-template.html, app/templates/flickr-photo-template.html,\
                     app/templates/book-list-template.html
 # master lists
-js.files.app =      ${js.app.models}, ${js.app.views}, ${js.app.routers}
-js.files.dev =      ${js.lib.nomunge}, ${js.lib.dev}, ${js.libext}, ${js.app.core},\
-                    ${js.app.settings.dev}, ${js.files.app}
-js.files.compress = ${js.libext}, ${js.app.core}, ${js.app.settings.production}, ${js.files.app}
+js.files.app =              ${js.app.models}, ${js.app.views}, ${js.app.routers}
+js.files.dev =              ${js.lib.nomunge}, ${js.lib.dev}, ${js.libext}, ${js.app.core},\
+                            ${js.app.settings.dev}, ${js.files.app}
+js.files.production =       ${js.libext}, ${js.app.core}, ${js.app.settings.production}, ${js.files.app}
+js.files.production.test =  ${js.libext}, ${js.app.core}, ${js.app.settings.dev}, ${js.files.app}
 
 # CSS Styles
 css.lib =    css/style.css, lib/jquery/css/jquery-ui-1.8.16.custom.css
